# sinq-amor

./: .gitmodules  README.md  TODO.md
ansible/: amor.yml  broker.yml  hosts  hosts_test_vm  inv-selfcontained.txt  inv_testing.txt  restart_simulation.yml  simulation_state.yml  staging  start_simulation.yml  stop_simulation.yml
ansible/group_vars/all/: vars.yml
ansible/roles/chopper_dornier/defaults/: main.yml
ansible/roles/chopper_dornier/tasks/: chopper_dornier_deps.yml  chopper_dornier_host.yml  main.yml
ansible/roles/chopper_dornier/templates/: chopper-ess-facade-for-sinq.conf.j2  facade-chopper-dornier.service.j2
ansible/roles/common/tasks/: main.yml  procserv.yml
ansible/roles/dimetix/files/: dimetix.py  dimetix.service
ansible/roles/dimetix/tasks/: main.yml
ansible/roles/epics/files/: amor_ioc.service  envPaths  sinqEPICS  st.cmd  startamorioc
ansible/roles/epics/files/db/: dimetix.db  dimetix.proto  el737Record.db  motorMessage.db  slsvme.db  slsvme.proto  spsamor.db  spss5.proto
ansible/roles/epics/files/dbd/: sinq.dbd  sinqEPICS.dbd
ansible/roles/epics/tasks/: main.yml
ansible/roles/forward-epics-to-kafka/meta/: main.yml
ansible/roles/forward-epics-to-kafka/tasks/: main.yml
ansible/roles/generator/defaults/: main.yml
ansible/roles/generator/files/: conanfile.txt  config.in  config.json  control.in  el737counter.py  gcc63  generator.service
ansible/roles/generator/tasks/: check.yml  cmake.yml  conan.yml  flatbuffers.yml  googletest.yml  main.yml  nevent_generator.yml  nexus.yml  python_modules.yml  rapidjson.yml  rdkafka.yml  stow.yml  streaming_data_types.yml  zmq.yml
ansible/roles/generator/templates/: generator.j2
ansible/roles/generator/vars/: main.yml
ansible/roles/kafka/defaults/: main.yml
ansible/roles/kafka/files/: kafka.service  zookeeper.service
ansible/roles/kafka/init.d/: kafka~  zookeeper  zookeeper~
ansible/roles/kafka/tasks/: check-kafka.yml  install-kafka.yml  kafka-service.yml  main.yml  rdkafka.yml  run-kafka.yml
ansible/roles/kafka/templates/: kafka.j2  zookeeper.j2
ansible/roles/kafka/vars/: main.yml
ansible/roles/magnet/files/: Magnet.py  SLSVME.py
ansible/roles/magnet/tasks/: main.yml
ansible/roles/motors/files/: ._mota  ._motb  ._motc  el734controller.py  el734motor.py  mota  mota.service  mota.substitutions  motb  motb.service  motb.substitutions  motc  motc.service  motc.substitutions
ansible/roles/motors/tasks/: main.yml
ansible/roles/motors/templates/: mota.j2  motb.j2  motc.j2
ansible/roles/playbook_local_deps/defaults/: main.yml
ansible/roles/playbook_local_deps/tasks/: main.yml
ansible/roles/sps/files/: spss5.py  spss5.service  spss5.service~
ansible/roles/sps/tasks/: main.yml
docs/: distance.ps  distance.tex  distances.eps  hand_out.ps  hand_out.tex  sketch.eps
facade-chopper-dornier/: facade-chopper-dornier.py  facade-chopper-dornier.service
neventGenerator/: AMORgenerator  AMORgenerator.cpp  AMORgenerator.cxx  AMORreceiver.cpp  AMORreceiver.cxx  CMakeLists.txt  Configuration.cxx  Configuration.hpp  Errors.cxx  Errors.hpp  Makefile  README.md  Stats.cxx  Stats.hpp  config.in  config.json  control.hpp  control.in  el737counter.py  factory.cxx  factory.hpp  file_writer.hpp  generator.hpp  generator.py  hardware.hpp  header.amor  header.hpp  json.h  kafka_generator.hpp  mcstas_reader.hpp  neventGeneratorConfig.h.in  nexus_reader.hpp  parser.hpp  psi_sinq_schema.h  psi_sinq_schema.hpp  sample_flatbuf_generated.h  sendline.py  serialiser.hpp  timestamp_generator.hpp  uparam.hpp  (+2 more)
neventGenerator/cmake/: FindGoogletest.cmake  FindHDF5.cmake  FindNexus.cmake  FindStreamingDataTypes.cmake  FindZMQ.cmake
neventGenerator/conan/: conanfile.txt
neventGenerator/sample/: psi_sinq_schema
neventGenerator/tests/: CMakeLists.txt  command_line_args.hpp  errors.cxx  incomplete_configuration.json  invalid_configuration.json  kafka_generator.cxx  nexus.cxx  parser.cxx  serialiser.cxx  tests.cxx  valid_configuration.json
